@@ -1,5 +1,5 @@
 *** nearest release ***
-  ! fix Drag&Drop under Windows 7
+  ! fix SIR icon in "Control Panel -> Programs & Functions" window.
 
 *** next release ***
   ! load all files selected in file menager (ie. Thunar) in just 1 instance of SIR
@@ -33,3 +33,4 @@
     * graphical flow diagram editor for scripts substitution
   ! Add color filters - colormaps (dog's view, jet); see also: http://www.mathworks.com/help/matlab/ref/colormap.html
   ! More JPEG compression options
+  ! Run SIR as web service
