@@ -1,6 +1,7 @@
 * unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7.2
     - Polish translation improved
     - fixed language autosetting
+    - fixed Drag & Drop under Windows
 
 * Thu Apr 17 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.1
     - fixed translating of Gradient Effect widgets
